<?xml version="1.0" encoding="utf-8"?>
<!-- Headers for a set of preferences used to exercise the DevicePolicyManager API. -->
<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="drinsta.chaitanya.applocker.DeviceAdminSample$GeneralFragment"
        android:title="@string/header_general" />

    <header
        android:fragment="drinsta.chaitanya.applocker.DeviceAdminSample$QualityFragment"
        android:title="@string/header_quality" />

    <header
        android:fragment="drinsta.chaitanya.applocker.DeviceAdminSample$ExpirationFragment"
        android:title="@string/header_expiration" />

    <header
        android:fragment="drinsta.chaitanya.applocker.DeviceAdminSample$LockWipeFragment"
        android:title="@string/header_lock_wipe" />

    <header
        android:fragment="drinsta.chaitanya.applocker.DeviceAdminSample$EncryptionFragment"
        android:title="@string/header_encryption" />

</preference-headers>
